UI 반응형 CSS수정 (2020.10.02)
- 크기가작아지면 텍스트가 겹치는 오류를 수정

--- a/TeamProject/static/css/post.css
+++ b/TeamProject/static/css/post.css
@@ -350,6 +350,7 @@ box-shadow:0 2px 6px 0 hsla(0,0%,0%,0.3);
 .info_top h1{
 	display: inline-block;
 	font-size : 2em;
+	margin-right: 70px;
 }
 .infoTop_buttons{
 	position: absolute;
