--- a/TeamProject/static/css/style.css
+++ b/TeamProject/static/css/style.css
@@ -8,7 +8,11 @@
 
 	/*font size : 1em,1.3em 1.9em */
 }
-
+textarea, input, button, select {
+ 	font-family: inherit;
+ 	line-height: inherit;
+ 	letter-spacing: inherit;
+}
 *{
 	margin : 0;
 	padding: 0;
@@ -350,6 +354,7 @@ border-top: 7px solid var(--point);
 	height: 80px;
 	bottom: 50px;
 	right: 50px;
+	z-index: 3;
 /*	border-radius: 50%;
 */
 background-color: var(--component);
@@ -372,9 +377,10 @@ box-shadow:0 2px 6px 0 hsla(0,0%,0%,0.3);
 .footer{
 	position: relative;
 	width: 100%;
-	height: 30px;
+	height: 70px;
+	margin-top: 40px;
 
-	background-color: transparent;
+	background-color: var(--header);
 }
 
 
