--- a/TeamProject/static/css/mypage.css
+++ b/TeamProject/static/css/mypage.css
@@ -12,6 +12,9 @@ body {
 	/* font-family: "Nanum Gothic", sans-serif; */
 	font-family: 'Noto Sans KR', sans-serif;
 }
+input,select{
+	font-family: inherit;
+}
 
 html{scroll-behavior: smooth;}
 
