--- a/TeamProject/templates/manager.html
+++ b/TeamProject/templates/manager.html
@@ -3,6 +3,7 @@
 <head>
 
     <link rel="stylesheet" type="text/css" href="../static/css/manager.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/navigation.css">
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet">
 
 </head>
@@ -16,8 +17,10 @@
                 <div class="nav_logo">
                     <a href="/" class="nav_logo_name">ROOMS</a>
                 </div>
-                <a href="/" class="nav_menu">MAIN</a>
-                <a href="/post" class="nav_menu">BOARD</a>
+                <div class="nav_auth">
+                    <a href="/" class="nav_menu">MAIN</a>
+                    <a href="/post" class="nav_menu">BOARD</a>
+                </div>
             </div>
 
         </div>
@@ -56,9 +59,10 @@
             
         </div>
 
-        <div id="category_modify_modal_container"></div>
         <div id="category_modal_container"></div>
         <div id="board_modal_container"></div>
+        <div id="board_modify_modal_container"></div>
+        
 
     </div>
 
