--- a/TeamProject/templates/main.html
+++ b/TeamProject/templates/main.html
@@ -32,14 +32,18 @@
         <div>
             <span class="logo">ROOMS</span>
         </div>
-        <div class="sub_container">
-            
-        </div>
-        <div class="search_container">
-            <i class="fas fa-search fa-2x search_icon"></i>
-            <input id="search" class="search" type="text" placeholder="Search?" autocomplete="off">
-            <input id="search_submit" class="search_submit" value="" type="submit">
-        </div>
+        <!-- <div class="sub_container">
+            <div>
+                <input type="text" id="main_login_id" name="id" class="main_login_input" placeholder="아이디 입력"
+                    autocomplete="off">
+            </div>
+            <div>
+                <input type="password" id="main_login_pw" name="pw" class="main_login_input" placeholder="비밀번호 입력"
+                    autocomplete="off">
+            </div>
+            <button id="main_login_btn" class="main_login_btn">LOGIN</button>
+        </div> -->
+        
 
         <div>
             <a href="#sub_title" class="main_arrow"><i class="fas fa-angle-double-down fa-3x"></i></a>
