--- a/TeamProject/templates/main.html
+++ b/TeamProject/templates/main.html
@@ -32,7 +32,7 @@
         <div>
             <span class="logo">ROOMS</span>
         </div>
-        <!-- <div class="sub_container">
+        <div class="sub_container">
             <div>
                 <input type="text" id="main_login_id" name="id" class="main_login_input" placeholder="아이디 입력"
                     autocomplete="off">
@@ -41,8 +41,8 @@
                 <input type="password" id="main_login_pw" name="pw" class="main_login_input" placeholder="비밀번호 입력"
                     autocomplete="off">
             </div>
-            <button id="main_login_btn" class="main_login_btn">LOGIN</button>
-        </div> -->
+            <button id="main_login_btn" class="main_login_btn">로그인</button>
+        </div>
         
 
         <div>
