--- a/TeamProject/static/css/post.css
+++ b/TeamProject/static/css/post.css
@@ -123,7 +123,9 @@ transition: all 0.3s ease-in-out;
 	font-weight: 550;
 
 }
-
+.loading_img{
+	height: 100px;
+}
 
 
 /*===========input==============*/
