--- a/TeamProject/static/css/main.css
+++ b/TeamProject/static/css/main.css
@@ -23,6 +23,8 @@ a:link, a:visited, a:active {
 	text-decoration: none;
 }
 
+.s_img, .category_board_image, .main_user_image{background: var(--color_ivory);}
+
 
 .container {
 	height: 90vh;
@@ -45,7 +47,7 @@ a:link, a:visited, a:active {
 
 .logo {
 	transition: all 0.3s;
-	font-size: 3.5em;
+	font-size: 4em;
 }
 .main_arrow{
 	position: absolute;
@@ -68,7 +70,7 @@ a:link, a:visited, a:active {
 	margin-left: 5vw;
 }
 
-
+ 
 .sub_container{
 	position: relative;
 	width: 27vw;
@@ -112,7 +114,19 @@ a:link, a:visited, a:active {
 .main_login_btn:hover{
 	background: var(--color_purple);
 }
-
+/* ----- 메인 첫 화면 유저 정보 css -----*/
+.main_auth_div{
+	text-align: center;
+}
+.main_user_info{
+	font-size: 1.3rem;
+}
+.main_user_image{
+    width: 2em;
+    height: 2em;
+    vertical-align: middle;
+	margin-right: 0.5em;
+}
 
 /* --------------- Login ----------------- */
 
@@ -221,13 +235,13 @@ a:link, a:visited, a:active {
 
 .signup_modal {
 	position: absolute;
-	width: 45vw;
-	height: 90vh;
+	width: 50vw;
+	height: 92.5vh;
 	background: #fff;
 	opacity: 0;
 	display: flex;
 	align-items: flex-end;
-	padding-right: 15vw;
+	padding-right: 17.5vw;
 	justify-content: center;
 	flex-direction: column;
 	top: 0;
@@ -272,7 +286,7 @@ a:link, a:visited, a:active {
 
 .signup_sub{
 	font-weight: bold;
-	font-size: 1.1em;
+	font-size: 1em;
 	color:var(--color_purple);
 }
 
@@ -281,7 +295,7 @@ a:link, a:visited, a:active {
 	background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 96%, var(--color_purple) 4%);
 	background-position: -800px 0;
 	background-repeat: no-repeat;
-	font-size: 1.1em;
+	font-size: 1em;
 	color: var(--color_purple);
 	font-weight: 500;
 	width: 30vw;
@@ -297,7 +311,7 @@ a:link, a:visited, a:active {
 }
 
 .signup_btn {
-	font-size: 1.1em;
+	font-size: 1em;
 	color: #fff;
 	background: var(--color_purple);
 	border: 1px solid whitesmoke;
@@ -500,7 +514,7 @@ a:link, a:visited, a:active {
 	font-weight: bold;
 	font-size: 1.1rem;
 
-	padding: 2.5em 3em 6em;
+	padding: 2.5em 5vw 6em;
 	width: 80vw;
 	min-height: 60vh;
 	margin-bottom: 10vh;
@@ -554,7 +568,7 @@ a:link, a:visited, a:active {
 .board_container{
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(21%, auto));
-	gap: 20px;
+	gap: 1.5em;
 	z-index: 1;
 	transition-duration: .5s;
 	transition: .5s all;
