메인 페이지 로그인 API 연결, 로그인 함수 구조 변경 (20.10.03)

--- a/TeamProject/static/css/main.css
+++ b/TeamProject/static/css/main.css
@@ -117,15 +117,17 @@ a:link, a:visited, a:active {
 /* ----- 메인 첫 화면 유저 정보 css -----*/
 .main_auth_div{
 	text-align: center;
+	margin-top: 1.8em;
 }
 .main_user_info{
 	font-size: 1.3rem;
 }
 .main_user_image{
-    width: 2em;
-    height: 2em;
+    width: 1.8em;
+    height: 1.8em;
     vertical-align: middle;
 	margin-right: 0.5em;
+	border-radius: 4px;
 }
 
 /* --------------- Login ----------------- */
