--- a/TeamProject/static/css/post.css
+++ b/TeamProject/static/css/post.css
@@ -126,7 +126,33 @@ transition: all 0.3s ease-in-out;
 .loading_img{
 	height: 100px;
 }
-
+.last_post{
+		width: calc( 100% - 27px );
+	height: 110px;
+	display: flex;
+	justify-content: space-between;
+	align-items : center;
+	background-color: var(--component);
+	padding: 10px;
+	margin-bottom: 20px;
+	border-style: none;
+/*	border-radius: 5px;
+*/	border:0;
+box-shadow:0 2px 6px 0 hsla(0,0%,0%,0.3);
+border-left: 7px solid var(--point);
+}
+.last_post img{
+	position: relative;
+	margin-right:20px;
+	height: 80px;
+	width: 80px;
+}
+.last_content{
+	width: calc( 100% - 100px);
+	margin-left: 10px;
+	margin-right: 5px;
+	font-weight: 550;
+}
 
 /*===========input==============*/
 .post_input{
