--- a/TeamProject/static/css/style.css
+++ b/TeamProject/static/css/style.css
@@ -32,7 +32,7 @@ body{
 .post_main{
 	position: relative;
 	width: 85%;
-	padding-top: 70px;
+	padding-top: 10vh;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -44,7 +44,7 @@ header{
 	align-items: left;
 	justify-content: space-between;
 	width: 100%;
-	height: 70px;
+	height: 10vh;
 	z-index: 1;
 	border:0;
 	box-shadow:0 2px 6px 0 hsla(0,0%,0%,0.3);
