--- a/TeamProject/templates/manager.html
+++ b/TeamProject/templates/manager.html
@@ -90,9 +90,9 @@
             <div class="reports">
                 <div class="report">
                     <input type="checkbox" class="r_item">
-                    <span class="r_item">ㅇ</span>
-                    <span class="r_item">ㅇ</span>
-                    <span class="r_item">ㅇ</span>
+                    <span class="r_item">2020/09/12</span>
+                    <span class="r_item">신고 게시글 예시0</span>
+                    <span class="r_item">명예 훼손 및 저작권 침해</span>
                     <button id="report_blacklist_btn" class="report_btn r_item">회원 정지</button>
                     <button id="report_del_btn" class="report_btn r_item">삭제</button>
                     <button id="report_cancel_btn" class="report_btn r_item">V</button>
@@ -100,7 +100,16 @@
                 <div class="report">
                     <input type="checkbox" class="r_item">
                     <span class="r_item">2020/09/14</span>
-                    <span class="r_item">아ㅋㅋ 진짜 코딩 너무재밌네</span>
+                    <span class="r_item">신고 게시글 예시1</span>
+                    <span class="r_item">욕설 및 부적절한 언어 사용</span>
+                    <button id="report_blacklist_btn" class="report_btn r_item">회원 정지</button>
+                    <button id="report_del_btn" class="report_btn r_item">삭제</button>
+                    <button id="report_cancel_btn" class="report_btn r_item">V</button>
+                </div>
+                <div class="report">
+                    <input type="checkbox" class="r_item">
+                    <span class="r_item">2020/09/19</span>
+                    <span class="r_item">신고 게시글 예시2</span>
                     <span class="r_item">홍보 및 낚시성 게시글</span>
                     <button id="report_blacklist_btn" class="report_btn r_item">회원 정지</button>
                     <button id="report_del_btn" class="report_btn r_item">삭제</button>
@@ -108,26 +117,17 @@
                 </div>
                 <div class="report">
                     <input type="checkbox" class="r_item">
-                    <span class="r_item">2020/09/14</span>
-                    <span class="r_item">아ㅋㅋ 진짜 코딩 너무재밌네</span>
-                    <span class="r_item">홍보 및 낚시성 게시글</span>
+                    <span class="r_item">2020/09/24</span>
+                    <span class="r_item">신고 게시글 예시3</span>
+                    <span class="r_item">음란성 및 청소년에게 부적절한 내용</span>
                     <button id="report_blacklist_btn" class="report_btn r_item">회원 정지</button>
                     <button id="report_del_btn" class="report_btn r_item">삭제</button>
                     <button id="report_cancel_btn" class="report_btn r_item">V</button>
                 </div>
                 <div class="report">
                     <input type="checkbox" class="r_item">
-                    <span class="r_item">2020/09/14</span>
-                    <span class="r_item">아ㅋㅋ 진짜 코딩 너무재밌네</span>
-                    <span class="r_item">홍보 및 낚시성 게시글</span>
-                    <button id="report_blacklist_btn" class="report_btn r_item">회원 정지</button>
-                    <button id="report_del_btn" class="report_btn r_item">삭제</button>
-                    <button id="report_cancel_btn" class="report_btn r_item">V</button>
-                </div>
-                <div class="report">
-                    <input type="checkbox" class="r_item">
-                    <span class="r_item">2020/09/14</span>
-                    <span class="r_item">아ㅋㅋ 진짜 코딩 너무재밌네</span>
+                    <span class="r_item">2020/10/03</span>
+                    <span class="r_item">신고 게시글 예시4</span>
                     <span class="r_item">홍보 및 낚시성 게시글</span>
                     <button id="report_blacklist_btn" class="report_btn r_item">회원 정지</button>
                     <button id="report_del_btn" class="report_btn r_item">삭제</button>
