--- a/TeamProject/templates/manager.html
+++ b/TeamProject/templates/manager.html
@@ -69,9 +69,9 @@
 
         <div>
             <span class="sub_title">신고 목록 - </span>
-            <select class="category_menu">
-                <option value="1">게시글</option>
-                <option value="2">댓글</option>
+            <select class="category_menu" id="report_select_menu">
+                <option value="post">게시글</option>
+                <option value="comment">댓글</option>
             </select>
             <button class="report_check_del_btn plus_btn">체크 리스트 삭제</button>
         </div>
@@ -79,25 +79,25 @@
         <div class="report_container">
             <div class="report_sub_title report">
                 <input type="checkbox" disabled class="r_item">
-                <span class="r_item">신고 날짜</span>
+                <span class="r_item">회원 닉네임</span>
                 <span class="r_item">제목</span>
-                <span class="r_item">신고 사유</span>
+                <span class="r_item">신고 횟수</span>
                 <span class="r_item">회원 정지</span>
                 <span class="r_item">삭제</span>
                 <span class="r_item">처리</span>
             </div>
             <div class="line2"></div>
             <div class="reports">
-                <div class="report">
+                <!-- <div class="report">
                     <input type="checkbox" class="r_item">
-                    <span class="r_item">2020/09/12</span>
-                    <span class="r_item">신고 게시글 예시0</span>
-                    <span class="r_item">명예 훼손 및 저작권 침해</span>
+                    <span class="r_item">닉넴(아디)</span>
+                    <span class="r_item">아 ㅋㅋ 신고 게시글 제목</span>
+                    <span class="r_item">13</span>
                     <button id="report_blacklist_btn" class="report_btn r_item">회원 정지</button>
                     <button id="report_del_btn" class="report_btn r_item">삭제</button>
                     <button id="report_cancel_btn" class="report_btn r_item">V</button>
-                </div>
-                <div class="report">
+                </div> -->
+                <!-- <div class="report">
                     <input type="checkbox" class="r_item">
                     <span class="r_item">2020/09/14</span>
                     <span class="r_item">신고 게시글 예시1</span>
@@ -132,7 +132,7 @@
                     <button id="report_blacklist_btn" class="report_btn r_item">회원 정지</button>
                     <button id="report_del_btn" class="report_btn r_item">삭제</button>
                     <button id="report_cancel_btn" class="report_btn r_item">V</button>
-                </div>
+                </div> -->
             </div>
         </div>
 
